# brad

./: .gitignore  LICENSE  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
docker/: docker-compose.yml
python/: pyproject.toml  requirements.txt
python/src/brad/: main.py
python/src/brad/sql/: __init__.py  config.py  database.py  objects.py  schema.py  tables.py  types.py  validation.py
python/tests/: test_main.py
python/tests/sql/: __init__.py  test_config.py  test_database.py  test_objects.py  test_schema.py  test_types.py  test_validation.py
scripts/: setup_local.sh  shutdown.sh  startup.sh
sql/tables/: account.sql  account_balance.sql  account_transaction.sql  account_type.sql  exchange_rate.sql  financial_product.sql  financial_product_type.sql  holder.sql  product_transaction.sql  product_value.sql  provider.sql  transaction_type.sql
src/bread/: main.py
src/bread/sql/: __init__.py  config.py  converters.py  database.py  objects.py  tables.py  validation.py
tests/: test_main.py
tests/sql/: __init__.py  test_config.py  test_converters.py  test_database.py  test_objects.py  test_validation.py
