[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bread"
version = "0.0.1"
authors = [
    {name = "JF Pascoal", email = "jfpascoal@gmail.com"},
]
description = ""
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]