[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brad"
version = "0.0.1"
authors = [
    {name = "JF Pascoal", email = "jfpascoal@gmail.com"},
]
description = ""
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]